--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello coursera!</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>mod2 assignment</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	perfect to learn from
+	<div class="row">
+		<div id="box" class="col-lg-4 col-md-6 col-sm-12">
+			<div id="pos">Chicken</div>
+			<div id="cont">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi voluptatem ratione, numquam nobis, assumenda dignissimos ipsam maxime. Suscipit numquam, asperiores magni. Aliquid nesciunt voluptas, autem a tempore vel hic corporis!</div>
+		</div>
+
+	<div id="box" class="col-lg-4 col-md-6 col-sm-12">
+		<div id="pos">Beef</div>
+			<div id="cont">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi voluptatem ratione, numquam nobis, assumenda dignissimos ipsam maxime. Suscipit numquam, asperiores magni. Aliquid nesciunt voluptas, autem a tempore vel hic corporis!</div>
+		</div>
+
+	<div id="box" class="col-lg-4 col-md-6 col-sm-12">
+		<div id="pos">Sushi</div>
+			<div id="cont">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi voluptatem ratione, numquam nobis, assumenda dignissimos ipsam maxime. Suscipit numquam, asperiores magni. Aliquid nesciunt voluptas, autem a tempore vel hic corporis!</div>
+		</div>
+	</div>
 </body>
 </html>
