--- a/mod3-sol/index.html
+++ b/mod3-sol/index.html
@@ -32,15 +32,15 @@
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
               <a href="menu-categories.html">
-                <span>Chicken</span><br class="hidden-xs"></a>
+                <span>Chicken</span><br class="hidden-xs hidden-md"></a>
             </li>
             <li>
               <a href="#">
-                <span>Beef</span><br class="hidden-xs"></a>
+                <span>Beef</span><br class="hidden-xs hidden-md"></a>
             </li>
             <li>
               <a href="#">
-                <span>Sushi</span><br class="hidden-xs"></a>
+                <span>Sushi</span><br class="hidden-xs hidden-md"></a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
